# ai-crm-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: admin.py  bitrix_webhook.py  health.py  telegram_webhook.py
app/bot/: dispatcher.py  keyboards.py
app/bot/handlers/: message.py  start.py
app/core/: config.py  exceptions.py  logging.py
app/db/: client.py  models.py  table_names.py
app/db/repositories/: events.py  followups.py  leads.py  messages.py  properties.py  settings.py  users.py  viewings.py
app/services/: dialog_service.py  rate_limit.py
app/services/ai/: chat.py  classifier.py  client.py  dialog_engine.py  extractor.py  prompts.py  tools.py
app/services/crm/: bitrix_client.py
app/services/properties/: models.py  quickdeal.py  search.py  sync.py
app/services/scheduler/: apscheduler.py  followup_jobs.py
app/services/transfer/: manager.py
app/utils/: datetime.py  phone.py
docker/: Dockerfile  docker-compose.yml
files/: CODEX_BRIEFING.md  novactiv-property-map-endpoint.php  project-structure.md  system-prompt.md  testing.md
files/novactive-ai/: CODEX_BRIEFING.md  README.md
files/novactive-ai/code/: env.example  project-structure.md  requirements.txt
prompts/: classifier-prompt.md  system-prompt.md
schemas/: lead-output.json  openai-tools.json
scripts/: sync_quickdeal_feed.py
tests/e2e/: test_dialog_context.py  test_dialog_service.py
tests/unit/: test_classifier.py  test_phone.py  test_property_search.py  test_quickdeal.py  test_tools.py
(+5 files in other folders)
