[project]
name = "novactive-ai-manager"
version = "0.1.0"
description = "AI manager for Novactiv real estate agency"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.4.1",
  "apscheduler>=3.10.4",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "openai>=1.50.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "structlog>=24.4.0",
  "supabase>=2.7.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

